objects/et4ae5__SMSDefinition__c.object
<CustomObject>
    <fields>
        <fullName>et4ae5__AllSources__c</fullName>
        <label>AllSources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__BackupWorkflow__c</fullName>
        <label>Backup Workflow Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Bounce_Rate_del__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Bounced__c / et4ae5__NumberSent__c , null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El porcentaje de devoluciones frente a los correos electrónicos que se han enviado</inlineHelpText>
        <label>Bounce Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Unit</label>
        <referenceTo>et4ae5__Business_Unit__c</referenceTo>
        <relationshipName>SMS_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Business_Unit_saved__c</fullName>
        <label>Business Unit saved</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>SMSDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Campaigns__c</fullName>
        <label>Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Click_Through_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueClicks__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El porcentaje de clics únicos frente a los correos electrónicos que se han enviado (excluidas las devoluciones)</inlineHelpText>
        <label>Click Through Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>SMSDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__ConversationId__c</fullName>
        <externalId>true</externalId>
        <label>Conversation Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ConversationId_old__c</fullName>
        <formula>$Organization.Id+Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversation Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Country_Code__c</fullName>
        <label>Country Code</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Created_Date_Time__c</fullName>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DataExtensionId__c</fullName>
        <label>DataExtensionId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__DateSent__c</fullName>
        <inlineHelpText>La fecha y hora reales del envío de Marketing Cloud</inlineHelpText>
        <label>Date Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__DedupeSubscribers__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Dedupe Subscribers</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Deliverability_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__NumberSent__c ) ), et4ae5__NumberSent__c != 0 ), et4ae5__Number_Delivered__c / et4ae5__NumberSent__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El porcentaje de correos electrónicos que se han entregado correctamente frente a los correos electrónicos que se han devuelto</inlineHelpText>
        <label>Deliverability Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__ETSendDef__c</fullName>
        <label>sendDef</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExclusionCampaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ExclusionCampaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>SMS_Definitions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__ExclusionLists__c</fullName>
        <label>Exclusion Lists</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Exclusion_Campaigns__c</fullName>
        <label>Exclusion Campaigns</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Exclusion_Reports__c</fullName>
        <label>Exclusion Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromAddress__c</fullName>
        <label>From Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromEmail__c</fullName>
        <label>From Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>et4ae5__FromName__c</fullName>
        <label>From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasBeenQueued__c</fullName>
        <defaultValue>false</defaultValue>
        <label>HasBeenQueued</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__HasEnteredRetry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Se reintentó este trabajo en algún punto del proceso. La razón principal de reintentos de trabajos es debida principalmente a problemas de conectividad.</inlineHelpText>
        <label>Retried</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__InitiatedDate__c</fullName>
        <formula>If( ISBLANK( et4ae5__Scheduled_Date_Time__c ),
      text(MONTH( datevalue(et4ae5__Created_Date_Time__c )) ) &amp; &quot;/&quot; &amp; text(DAY(datevalue(et4ae5__Created_Date_Time__c )) )&amp; &quot;/&quot; &amp; text(YEAR(datevalue(et4ae5__Created_Date_Time__c ))),
text(MONTH(  datevalue(et4ae5__Scheduled_Date_Time__c )))  &amp; &quot;/&quot; &amp; text(DAY(datevalue(et4ae5__Scheduled_Date_Time__c ))) &amp; &quot;/&quot; &amp; text(YEAR(datevalue(et4ae5__Scheduled_Date_Time__c ))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>InitiatedDate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobId__c</fullName>
        <label>JobId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobStarted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>JobStarted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__JobStatus__c</fullName>
        <label>JobStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__Keyword__c</fullName>
        <label>Keyword</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead</label>
        <referenceTo>Lead</referenceTo>
        <relationshipName>SMSDefinitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__MemberID__c</fullName>
        <label>MemberID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Message_Text__c</fullName>
        <label>Message Text</label>
        <length>800</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__Messages__c</fullName>
        <label>Messages</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberNotClicked__c</fullName>
        <formula>et4ae5__Number_Delivered__c -  et4ae5__NumberofUniqueClicks__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El número de suscriptores que no han realizado ninguna acción en el correo electrónico (p. ej., no han seleccionado ningún vínculo)</inlineHelpText>
        <label>Number Not Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberSent__c</fullName>
        <inlineHelpText>El número de mensajes de correo electrónico enviados. Este valor corresponde al número de suscriptores a los que se dirige este envío, excepto los suscriptores que se hayan excluido.</inlineHelpText>
        <label>Number Sent</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberUnsubscribed__c</fullName>
        <inlineHelpText>El número de suscriptores que han cancelado su suscripción tras el envío</inlineHelpText>
        <label>Number Unsubscribed</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Bounced__c</fullName>
        <formula>et4ae5__NumberofHardBounces__c + et4ae5__NumberofSoftBounces__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El número de mensajes de correo electrónico que se han devuelto, independientemente de si la devolución es permanente o temporal</inlineHelpText>
        <label>Number Bounced</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Delivered__c</fullName>
        <formula>et4ae5__NumberSent__c - et4ae5__Number_Bounced__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El número de mensajes de correo electrónico que no se han devuelto</inlineHelpText>
        <label>Number Delivered</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Number_Not_Opened__c</fullName>
        <formula>et4ae5__Number_Delivered__c - et4ae5__NumberofUniqueOpens__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El número de suscriptores que no han abierto el mensaje de correo electrónico</inlineHelpText>
        <label>Number Not Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUndeliverables__c</fullName>
        <inlineHelpText>El número de suscriptores a los que no se ha podido entregar el mensaje</inlineHelpText>
        <label>Number of Existing Undeliverables</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofExistingUnsubscribes__c</fullName>
        <inlineHelpText>El número de suscriptores que habían cancelado su suscripción o que no habían aceptado en el momento en que se envió el correo electrónico</inlineHelpText>
        <label>Number of Existing Unsubscribes</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofHardBounces__c</fullName>
        <inlineHelpText>El número de mensajes de correo electrónico que no se han entregado debido a errores permanentes</inlineHelpText>
        <label>Number of Hard Bounces</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSoftBounces__c</fullName>
        <inlineHelpText>El número de mensajes de correo electrónico que no se han entregado debido a errores no permanentes</inlineHelpText>
        <label>Number of Soft Bounces</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofSubscribersForwardingEmail__c</fullName>
        <inlineHelpText>El número total de suscriptores que han seleccionado el vínculo Reenviar</inlineHelpText>
        <label>Number of Subscribers Forwarding</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalClicks__c</fullName>
        <inlineHelpText>El número de acciones realizadas en un mensaje de correo electrónico (por ej. haciendo clic en cualquier vínculo). Este valor incluye acciones múltiples por el mismo suscriptor.</inlineHelpText>
        <label>Number of Total Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofTotalOpens__c</fullName>
        <inlineHelpText>El número de veces que se abrió el mensaje. Este valor incluye aperturas múltiples por el mismo suscriptor.</inlineHelpText>
        <label>Number of Total Opens</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueClicks__c</fullName>
        <inlineHelpText>El número de suscriptores que realizaron una acción en el correo electrónico (p. ej., haciendo clic en cualquier vínculo)</inlineHelpText>
        <label>Number of Unique Clicks</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__NumberofUniqueOpens__c</fullName>
        <inlineHelpText>El número de mensajes de correo electrónico únicos que se abrieron. Este valor incluye una única apertura por suscriptor.</inlineHelpText>
        <label>Number of Unique Opens</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__Open_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberofUniqueOpens__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El porcentaje de correos electrónicos que se han abierto frente a los correos electrónicos que se han enviado (excluidas las devoluciones)</inlineHelpText>
        <label>Open Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__Opt_in_Certification_Date_Time__c</fullName>
        <label>Opt-in Certification Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Opt_in_Certification_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opt-in Certification User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Mobile_Sends</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__RecipientsOptedIn__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Required as a compliance precaution to check that the send requestor has ensured all recipients are indeed opted into receiving emails.</description>
        <label>Recipients Opted In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__ReportId__c</fullName>
        <description>SF Id of the report used to provide supplemental information for the send.</description>
        <label>Report Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__ReportName__c</fullName>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Reports__c</fullName>
        <label>Reports</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>et4ae5__Scheduled_Date_Time__c</fullName>
        <label>Scheduled Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendClassificationId__c</fullName>
        <label>Send Classification Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SendStatus__c</fullName>
        <label>Send Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>et4ae5__SendTime__c</fullName>
        <label>Send Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Send_Status_View__c</fullName>
        <formula>IF(

      ISPICKVAL( et4ae5__SendStatus__c , &apos;Scheduled&apos; )
      &amp;&amp;
      et4ae5__Scheduled_Date_Time__c &lt;= NOW()

      ,

      &apos;Queued for Processing&apos;

      ,

      TEXT( et4ae5__SendStatus__c )

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El estado de envío indica en qué fase del proceso se encuentra el envío.</inlineHelpText>
        <label>Send Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SenderProfileId__c</fullName>
        <label>SenderProfileId</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Status_Date_Time__c</fullName>
        <defaultValue>now()</defaultValue>
        <label>Status Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubscriberListId__c</fullName>
        <label>Subscriber List Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SubscriberListName__c</fullName>
        <label>Subscriber List Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__SyncComplete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncComplete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__SyncId__c</fullName>
        <label>SyncId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__Thumbnail__c</fullName>
        <label>Thumbnail</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>et4ae5__TimeSinceRequest__c</fullName>
        <formula>IF(isblank( et4ae5__TrackingLastRequested__c),
      31,
      (NOW() -  et4ae5__TrackingLastRequested__c)*24*60
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeSinceRequest</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>et4ae5__TrackingLastRequested__c</fullName>
        <label>TrackingLastRequested</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__TrackingOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TrackingOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__Tracking_As_Of__c</fullName>
        <inlineHelpText>La fecha y la hora de recepción de la última actualización de seguimiento</inlineHelpText>
        <label>Tracking As Of</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>et4ae5__TriggerDelayedSend__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TriggerDelayedSend</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>et4ae5__UEBU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Enabled Business Unit</label>
        <referenceTo>et4ae5__UEBU__c</referenceTo>
        <relationshipName>SMS_Definitions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>et4ae5__Unsubscribe_Rate__c</fullName>
        <formula>IF( AND( NOT( ISNULL( et4ae5__Number_Delivered__c ) ), et4ae5__Number_Delivered__c != 0 ), et4ae5__NumberUnsubscribed__c / et4ae5__Number_Delivered__c, null )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>El porcentaje de suscriptores que han cancelado su suscripción frente a los correos electrónicos que se han enviado (excluidas las devoluciones)</inlineHelpText>
        <label>Unsubscribe Rate</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>et4ae5__fBusiness_Unit__c</fullName>
        <formula>IF(isblank(et4ae5__Business_Unit__r.Name), et4ae5__Business_Unit_saved__c ,et4ae5__Business_Unit__r.Name &amp; &quot; (&quot; &amp;  et4ae5__Business_Unit__r.et4ae5__Business_Unit_ID__c &amp; &quot;)&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__message__c</fullName>
        <label>Message Text (Deprecated 5.31)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__shortCode__c</fullName>
        <label>Short Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__smsId__c</fullName>
        <label>Message Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>et4ae5__smsName__c</fullName>
        <label>Message Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mobile Send</label>
    <listViews>
        <fullName>et4ae5__All</fullName>
        <columns>NAME</columns>
        <columns>et4ae5__Send_Status_View__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Mobile Send Definition Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mobile Sends</pluralLabel>
    <recordTypes>
        <fullName>et4ae5__Queued_SMS_Definition</fullName>
        <active>true</active>
        <label>Queued SMS Definition</label>
    </recordTypes>
    <recordTypes>
        <fullName>et4ae5__SMS_Definition</fullName>
        <active>true</active>
        <label>SMS Definition</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>